# nted

./: ABOUT_THE_EXAMPLES.TXT  AUTHORS  COPYING  FAQ  INSTALL  Makefile.am  Makefile.in  README  README.md  acceleration.cpp  acceleration.h  aclocal.m4  beam.cpp  beam.h  beaming.h  chordorrest.cpp  chordorrest.h  clipboard.cpp  clipboard.h  config.h.in  configure  configure.in  crescendo.cpp  crescendo.h  dynarray.h  freechord.cpp  freechord.h  freechordname.cpp  freechordname.h  freereplaceable.cpp  freereplaceable.h  freesign.cpp  freesign.h  freespacer.cpp  freespacer.h  freetext.cpp  freetext.h  importer.cpp  importer.h  line.cpp  (+46 more)
chords/: Makefile.am  Makefile.in  chorddialog.cpp  chorddialog.h  chordpainter.cpp  chordpainter.h  chords.cpp  chordstruct.h
commands/: Makefile.am  Makefile.in  addnoteatcommand.cpp  addnoteatcommand.h  appendnewpagecommand.cpp  appendnewpagecommand.h  appendstaffcommand.cpp  appendstaffcommand.h  appendsystemcommand.cpp  appendsystemcommand.h  changeaccidentalcmd.cpp  changeaccidentalcmd.h  changechordorrestlength.cpp  changechordorrestlength.h  changechordorreststatus.cpp  changechordorreststatus.h  changelyricscommand.cpp  changelyricscommand.h  changemeasurespread.cpp  changemeasurespread.h  changemeasuretimsigcommand.cpp  changemeasuretimsigcommand.h  changemeasuretypecommand.cpp  changemeasuretypecommand.h  changenotehead.cpp  changenotehead.h  changenotestatus.cpp  changenotestatus.h  changespacement.cpp  changespacement.h  changestaffclefcmd.cpp  changestaffclefcmd.h  changestaffkeysigcmd.cpp  changestaffkeysigcmd.h  changetie.cpp  changetie.h  changetimsigcommand.cpp  changetimsigcommand.h  changeupbeatcommand.cpp  changeupbeatcommand.h  (+81 more)
datafiles/: Makefile.am  Makefile.in
datafiles/applications/: nted.desktop
datafiles/nted/: ntedfont.pfa
datafiles/nted/examples/: example1.ntd  example10.ntd  example11.ntd  example2.ntd  example3.ntd  example4.ntd  example5.ntd  example6.ntd  example7.ntd  example8.ntd  example9.ntd
dialogs/: Makefile.am  Makefile.in  chordnamedialog.cpp  chordnamedialog.h  clefconfigdialog.cpp  clefconfigdialog.h  drumconfigdialog.cpp  drumconfigdialog.h  druminfo.cpp  druminfo.h  insertblockdialog.cpp  insertblockdialog.h  keysigdialog.cpp  keysigdialog.h  lilypondexportdialog.cpp  lilypondexportdialog.h  linesdialog.cpp  linesdialog.h  lyricseditor.cpp  lyricseditor.h  measureconfigdialog.cpp  measureconfigdialog.h  midiimportdialog.cpp  midiimportdialog.h  midirecordconfigdialog.cpp  midirecordconfigdialog.h  mutedialog.cpp  mutedialog.h  paperconfigdialog.cpp  paperconfigdialog.h  portchoosedialog.cpp  portchoosedialog.h  printconfigdialog.cpp  printconfigdialog.h  scaledialog.cpp  scaledialog.h  scoreinfodialog.cpp  scoreinfodialog.h  selectordialog.cpp  selectordialog.h  (+18 more)
doc/: Makefile.am  Makefile.in  translated-manual.mk
doc/de/: Makefile.am  Makefile.in  de.po  index.docbook
doc/docimages/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
doc/es/: Makefile.am  Makefile.in  es.po  index.docbook
doc/fr/: Makefile.am  Makefile.in  fr.po  index.docbook
doc/it/: Makefile.am  Makefile.in  index.docbook  it.po
doc/templates/: Makefile.am  Makefile.in
icons/: Makefile.am  Makefile.in  alto_clef_icon.h  arpeggio_icon.h  arrow_down_icon.h  arrow_left_icon.h  arrow_right_icon.h  arrow_up_icon.h  background1.h  background2.h  backgroundh1.h  backgroundh2.h  backgroundv1.h  backgroundv2.h  bass_clef_icon.h  bow_down_icon.h  bow_up_icon.h  brace_icon.h  bracket_icon.h  color_icon.h  comm_icon.h  cross_icon.h  cut_icon.h  dcross_icon.h  ddot_icon.h  delete_staff_icon.h  delete_system_icon.h  dflat_icon.h  dot_icon.h  drum10_icon.h  drum10_icon_small.h  drum11_icon.h  drum11_icon_small.h  drum12_icon.h  drum12_icon_small.h  drum1_icon.h  drum1_icon_small.h  drum2_icon.h  drum2_icon_small.h  drum3_icon.h  (+69 more)
idiotseditor/: Makefile.am  Makefile.in  changeidnotecommand.cpp  changeidnotecommand.h  idcommandhistory.cpp  idcommandhistory.h  idcommandlist.cpp  idcommandlist.h  idiotseditor.cpp  idiotseditor.h
man/: Makefile.am  Makefile.in  nted.1
po/: Makevars  POTFILES.in  de.gmo  de.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fr.gmo  fr.po  hu.gmo  hu.po  it.gmo  it.po  nl.gmo  nl.po  nted.pot  ru.gmo  ru.po  sv.gmo  sv.po  uk.gmo  uk.po  zh_CN.gmo  zh_CN.po
