#########################################################################################
#											#
# This program is free software; you can redistribute it and#or modify it under the	#
# terms of the GNU General Public License as published by the Free Software		#
# Foundation; either version 2 of the License, or (at your option) any later version.	#
#											#
# This program is distributed in the hope that it will be useful, but WITHOUT ANY	#
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A	#
# PARTICULAR PURPOSE. See the GNU General Public License for more details.		#
#											#
# You should have received a copy of the GNU General Public License along with this	#
# program; (See "COPYING"). If not, If not, see <http://www.gnu.org/licenses/>.         #
#											#
#---------------------------------------------------------------------------------------#
#											#
# Copyright	Joerg Anders, TU Chemnitz, Fakultaet fuer Informatik, GERMANY		#
#		ja@informatik.tu-chemnitz.de						#
#											#
#											#
#########################################################################################

EXAMPLES = nted/examples/example1.ntd nted/examples/example2.ntd  nted/examples/example3.ntd \
	nted/examples/example4.ntd  nted/examples/example5.ntd  nted/examples/example6.ntd \
	nted/examples/example7.ntd nted/examples/example8.ntd nted/examples/example9.ntd \
	nted/examples/example10.ntd nted/examples/example11.ntd

nobase_dist_data_DATA = nted/ntedfont.pfa $(EXAMPLES) applications/nted.desktop

